--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./imgs/logopagina.png" type="logopagina">
     <title>Portfolio Pietrobon Facundo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
